# oanda-api-v20

./: .travis.yml  CHANGELOG.rst  README.rst  pyproject.toml  setup.py
docs/: conf.py  installation.rst
jupyter/: orders.ipynb
oandapyV20/: __init__.py
oandapyV20/contrib/: generic.py
oandapyV20/definitions/: transactions.py
oandapyV20/endpoints/: decorators.py
oandapyV20/types/: types.py
