[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oandapyV20"
version = "0.7.3"
description = "OANDA REST V20 API wrapper"
readme = "README.rst"
requires-python = ">=3.6"
license = "MIT"
keywords = ["OANDA", "FOREX/CFD", "wrapper", "REST-V20", "API"]
authors = [
    {name = "Feite Brekeveld", email = "f.brekeveld@gmail.com"}
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.10",
    "six>=1.10"
]

[project.urls]
Homepage = "https://github.com/hootnot/oanda-api-v20"
Documentation = "http://oanda-api-v20.readthedocs.io/en/latest/"
